Capstone 2 Requirements - Changed Footer

--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
 
   <!-- Footer -->
   <footer class="border-t-[3px] border-brutal-black dark:border-brutal-white py-8 px-4 text-center mono text-sm bg-brutal-black text-brutal-white">
-    <p>© 2026 <span class="font-bold" id="footer-name">SAMIN QURESHI</span> // COMPILED WITH <span class="text-brutal-red">█</span> AND MONSTER MANGO LOCO</p>
+    <p>© 2026 <span class="font-bold" id="footer-name">SAMIN QURESHI</span> // MADE WITH <span class="text-brutal-red">♥</span> AND MONSTER MANGO LOCO</p>
     <div id="footer-links" class="flex flex-wrap justify-center gap-4 mt-4 opacity-70">
       <!-- Rendered by JavaScript from CONFIG.links -->
     </div>
