--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
   <section class="pt-28 md:pt-32 pb-16 md:pb-20 px-4 md:px-8 min-h-[92vh] md:min-h-screen flex flex-col justify-center max-w-7xl mx-auto">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 md:gap-12 items-start">
       <div class="space-y-6 md:space-y-8">
-        <div class="inline-block bg-brutal-yellow text-brutal-black px-4 py-2 mono text-xs md:text-sm font-bold transform -rotate-1 brutal-card border-[3px]">
+        <div class="inline-block bg-brutal-yellow text-brutal-green px-4 py-2 mono text-xs md:text-sm font-bold transform -rotate-1 brutal-card border-[3px]">
           █ AVAILABLE FOR HIRE
         </div>
 
