Capstone 2 Requirements - Changed Terminal

--- a/index.html
+++ b/index.html
@@ -505,12 +505,10 @@
             <span class="terminal-prompt mr-2">$</span>
             ./welcome.sh
           </div>
-          <div class="mb-4 text-brutal-green">
-            ╔══════════════════════════════════════════╗<br>
-            ║  SAMIN QURESHI // PORTFOLIO TERMINAL     ║<br>
-            ║  Type 'help' for available commands      ║<br>
-            ╚══════════════════════════════════════════╝
-          </div>
+          <pre class="mb-4 text-brutal-green font-mono text-sm md:text-base">╔══════════════════════════════════════════╗
+  SAMIN QURESHI // PORTFOLIO TERMINAL 
+  Type 'help' for available commands  
+╚══════════════════════════════════════════╝</pre>
           <div id="terminal-output" class="space-y-1"></div>
           <div class="flex items-center mt-4" id="terminal-input-line">
             <span class="terminal-prompt mr-2">$</span>
