--- a/index.html
+++ b/index.html
@@ -1604,9 +1604,9 @@
           PHILOSOPHY<span class="text-brutal-cyan">_STATEMENT.MD</span>
         </h3>
         <blockquote class="text-lg md:text-xl leading-relaxed mb-4 border-l-4 border-brutal-cyan pl-4 italic">
-          "We are the facilitators of our own creative evolution"
+          "The goal of architecture is to provide a container for the human spirit to flourish."
         </blockquote>
-        <p class="text-sm opacity-60 mb-6">- Bill Hicks</p>
+        <p class="text-sm opacity-60 mb-6">- Christopher Alexander</p>
         <div class="space-y-4 text-sm md:text-base leading-relaxed">
           <p>
             I believe software development is more than writing code, it's about solving real problems  that impact people's lives. My journey from building chess engines to mental health applications reflects my core belief: technology should serve humanity, not the other way around.
