--- a/index.html
+++ b/index.html
@@ -2713,10 +2713,10 @@
 
         <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 pt-2 md:pt-4">
           <a href="#professional" class="brutal-card inline-flex justify-center bg-brutal-black dark:bg-brutal-white text-brutal-white dark:text-brutal-black px-6 md:px-8 py-3 mono font-bold">
-            VIEW_WORK →
+            VIEW_WORK
           </a>
           <a href="#contact" class="brutal-card inline-flex justify-center bg-transparent px-6 md:px-8 py-3 mono font-bold">
-            CONTACT_
+            CONTACT_ME
           </a>
           <button onclick="toggleBusinessCard()" id="business-card-btn" class="brutal-card inline-flex justify-center bg-brutal-yellow text-brutal-black px-6 md:px-8 py-3 mono font-bold">
             BUSINESS_CARD
