Added courier to projects

--- a/index.html
+++ b/index.html
@@ -3969,6 +3969,15 @@
           period: "2026-PRESENT",
         },
         {
+          name: "COURIER",
+          description:
+            "Open-source API testing similar to Postman but with a bauhaus twist. Built with Rust for speed and TypeScript for flexibility.",
+          tech: ["RUST + TYPESCRIPT", "FULL-STACK", "OPEN SOURCE"],
+          color: "bg-brutal-cyan",
+          live: true,
+          href: "https://github.com/blitzwolfz/Courier",
+        },
+        {
           name: "Brutal Weather - iOS & Android App",
           description: "Brutalist styled weather app with multi source data, offline caching, and AI-generated roasts",
           tech: ["REACT NATIVE", "ON-DEVICE AI", "WEATHER APIS"],
