Sole Proprietorship now active

--- a/index.html
+++ b/index.html
@@ -3881,7 +3881,7 @@
           </div>
           <div class="flex justify-between items-center">
             <span class="opacity-60">STATUS</span>
-            <span class="font-bold text-brutal-yellow">PENDING</span>
+            <span class="font-bold text-brutal-yellow">ACTIVE</span>
           </div>
           <div class="flex justify-between items-center">
             <span class="opacity-60">PRIMARY_USE</span>
@@ -4024,7 +4024,7 @@
         // true => glitch "COMING_SOON" and download disabled
         // false => download enabled (as long as downloadUrl is set)
         showResumeUnavailableBanner: false,
-        showSoleProprietorshipComingSoon: true,  // Toggle "Coming Soon" banner for sole proprietorship
+        showSoleProprietorshipComingSoon: false,  // Toggle "Coming Soon" banner for sole proprietorship
       },
       // =============================================
       // EMAILJS CONFIGURATION
